Changed homescreen layout

--- a/code_samples.html
+++ b/code_samples.html
@@ -24,7 +24,7 @@
                     <li><a href="contact.html" class="links">Contact</a></li>
                 </ul>
             </header>
-            <div class="wrap">
+            <div class="footer_wrap">
                 <footer>
                     <div class="header1">Austin Klein</div>
                 </footer>
