--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <li><a href="contact.html" class="links">Contact</a></li>
                 </ul>
             </header>
+            <!--
             <div class="content_wrap">
                 <div id="section1">
                     <div class="content">
@@ -68,52 +69,66 @@
                     </div>
                 </div>
             </div>
-            <div class="wrap" style="font-size:0">
-                <img id="jpg" src="images/skiing.jpg">
+            -->
+            <div class="content_wrap">
+                <div class="image_text">
+                    <!--
+                    <div class="content">
+                        <h3 class="paragraph">Writing</h3>
+                        <br />
+                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis tempus cursus mentum.</p>
+                        <br />
+                        <p class="paragraph"><a href="index.html" class="links1">Read My Blog</a></p>
+                    </div>
+                    -->
+                </div>
             </div>
             <div class="wrap">
-                <img id="jpg" src="images/rowing.jpg">
-            </div>
-                <div class="wrap">
-                    <div id="section1">
-                        <div class="content">
-                            <h3 class="paragraph">Writing</h3>
-                            <br />
-                            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis tempus cursus mentum.</p>
-                            <br />
-                            <p class="paragraph"><a href="index.html" class="links">Read My Blog</a></p>
-                        </div>
-                        <div class="content">
-                            <h3 class="paragraph">Development</h3>
-                            <br />
-                            <p class="paragraph">Sed adipiscing urna et neque euismod, et luctus eros vehicula. Vestibulum dapibus urna at mi porttitor condimentum.</p>
-                            <br />
-                            <p class="paragraph"><a href="index.html" class="links">View My Themes</a></p>
-                        </div>
-                        <div class="content">
-                            <h3 class="paragraph">Newsletter</h3>
-                            <br />
-                            <p class="paragraph">Aliquam porttitor vel sapien id pharetra. Mauris id mauris eleifend, dignissim lacus id, tempus mauris, eros vehicula.</p>
-                            <br />
-                            <p class="paragraph"><a href="index.html" class="links">Subscribe Via Email</a></p>
-                        </div>
+                <div class="image_text1">
+                    <!--
+                    <div class="content">
+                        <h3 class="paragraph">Writing</h3>
                         <br />
+                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis tempus cursus mentum.</p>
                         <br />
+                        <p class="paragraph"><a href="index.html" class="links1">Read My Blog</a></p>
+                    </div>
+                    <div class="content">
+                        <h3 class="paragraph">Development</h3>
                         <br />
+                        <p class="paragraph">Sed adipiscing urna et neque euismod, et luctus eros vehicula. Vestibulum dapibus urna at mi porttitor condimentum.</p>
                         <br />
+                        <p class="paragraph"><a href="index.html" class="links1">View My Themes</a></p>
+                    </div>
+                    <div class="content">
+                        <h3 class="paragraph">Newsletter</h3>
                         <br />
+                        <p class="paragraph">Aliquam porttitor vel sapien id pharetra. Mauris id mauris eleifend, dignissim lacus id, tempus mauris, eros vehicula.</p>
                         <br />
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <br />
+                        <p class="paragraph"><a href="index.html" class="links1">Subscribe Via Email</a></p>
                     </div>
                 </div>
-            <!--
+                -->
+            </div>
+            <div class="wrap">
+                <div class="section1">
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                </div>
+            </div>
+                <!--
         <div class="footer_wrap">
             <footer>
                 <div class="header1">Austin Klein</div>
