--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </div>
-            <div class="wrap">
+            <div class="footer_wrap">
                 <footer>
                     <div class="header1">Austin Klein</div>
                 </footer>
