--- a/about_me.html
+++ b/about_me.html
@@ -39,6 +39,7 @@
                             <li><a href="#CODING">Coding</a></li>
                             <li><a href="#SKIING">Skiing</a></li>
                             <li><a href="#ROWING">Rowing</a></li>
+                            <li style="float:right"><a href="#RESUME">Resume</a></li>
                         </ul>
                         <div id="CODING">
                             <h3 class="paragraph">Coding</h3>
@@ -90,14 +91,19 @@
                                 <br />
                             </div>
                         </div>
+                        <div id="RESUME" style=" padding-left: 0px; padding-right: 0px; width:100%; height:1255px">
+                            <h3 class="paragraph">Resume</h3>
+                            <object data="resume.pdf" type="application/pdf" name="resume.pdf" style="width:100%; height:85%"></object>
+                            <div id="header2">
+                                <h4><a href="#top" class="links">Back to top</a></h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <!--
-            <div class="wrap">
-                <footer>
-                    <div class="header1">Austin Klein</div>
-                </footer>
+            <div class="footer_wrap">
+                <div class="header1">Austin Klein</div>
             </div>
             -->
         </div>
