Added content to code samples page

--- a/about_me.html
+++ b/about_me.html
@@ -4,8 +4,8 @@
     <title>Austin Klein</title>
     <link rel="icon" href="images/circle_favicon.ico" type="image/x-icon">
     <style type="text/css"></style>
-    <script type="text/javascript" src="jquery.js"></script>
-    <script src="jquery.stellar.js"></script>
+    <!--<script type="text/javascript" src="jquery.js"></script>
+    <script src="jquery.stellar.js"></script>-->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
     <script src="//code.jquery.com/jquery-1.9.1.js"></script>
     <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
@@ -32,7 +32,7 @@
                     <li><a href="contact.html" class="links">Contact</a></li>
                 </ul>
             </header>
-            <div class="content_wrap">
+            <div class="initial_wrap">
                 <div id="section1">
                     <div id="tabs">
                         <ul>
@@ -42,7 +42,7 @@
                             <li style="float:right"><a href="#RESUME">Resume</a></li>
                         </ul>
                         <div id="CODING">
-                            <h3 class="paragraph">Coding</h3>
+                            <h3 class="title_about_me">Coding</h3>
                             <p class="paragraph_about_me">
                                 As a second year Software Engineering student at Rochester Institute of Technology one might think that computers have been a huge part of my life forever. My family however, did not receive a hand-me-down computer until I reached eighth grade. Just because this was true does not mean that I have not always had a passion for all things technical. I constantly played with circuits and toy robots when I was younger in order to satisfy this interest that I had. After school at the public library I enjoyed discovering new shortcuts and programs to make using the computer faster and easier. Since there was still so much more to learn about how computers worked I took computer programming courses in both my freshman and senior year of High School in attempt to satisfy my curiosity. This only opened up more questions about the hardware of computers, as well as the software that makes them run.
                             </p>
@@ -55,12 +55,13 @@
                                 Here at RIT I learn the theory behind the code we write. I take classes with the hardware we will be writing for, such as the Raspberry Pi. In teams we step through the development process from requirements gathering through the design process to implementation and refactoring. In my later years I can focus more on specific interests such as frontend, backend, mobile, or even artificial intelligence. The greatest part for me however, is that I will get a chance to have experience in all of these topics all while bettering myself as a Software Engineer. I know that all of this knowledge that I gained, and will continue to gain, will answer more questions than I ever thought I would have as an eighth grader.
                             </p>
                             <div id="header2">
+                                <br />
                                 <h4><a href="#top" class="links">Back to top</a></h4>
                                 <br />
                             </div>
                         </div>
                         <div id="SKIING">
-                            <h3 class="paragraph">Skiing</h3>
+                            <h3 class="title_about_me">Skiing</h3>
                             <p class="paragraph_about_me">
                                 If I had to summarize my lifetime experience of skiing and my few seasons as a ski instructor, I would tell this single story. This story took place during a five hour lesson with a group of about six, seven year-olds who were skiing at an intermediate level. They could easily ski green circle trails and some blue square trails, but black diamond trails were what we were working towards. It was the last run before lunch and we had plenty of time to ski a blue square trail as well as take some time for a lesson while going down. We started skiing and were about halfway down the trail when one of the girls stopped. She had skied harder trails earlier that day, but for whatever reason this trail scared her. She started to cry so I skied up to where she was in the line.
                             </p>
@@ -73,12 +74,13 @@
                                 I learned thousands of things during my time as a ski instructor. I learned that fairness with the kids earns respect and trust with the children so they treat me as an instructor and not as someone to disregard. While the kids rightfully have fears of their own, I have learned that a strong confident voice will get them to listen. However most importantly I learned that to understand a situation completely I need to stop and look at the circumstance from other points of view. Just because one individual says that the best way of getting down the mountain would be on two feet does not mean that it is the only way. For some, a better way would be on your bottom.
                             </p>
                             <div id="header2">
+                                <br />
                                 <h4><a href="#top" class="links">Back to top</a></h4>
                                 <br />
                             </div>
                         </div>
                         <div id="ROWING">
-                            <h3 class="paragraph">Rowing</h3>
+                            <h3 class="title_about_me">Rowing</h3>
                             <p class="paragraph_about_me">
                                 Morbi fermentum gravida lectus, et porttitor ipsum elementum vitae. Etiam rutrum felis eu ante tristique eleifend. Nam bibendum posuere massa. Nunc vitae mauris ut sem malesuada lacinia vel id risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum eleifend posuere. Praesent aliquam vulputate massa sit amet imperdiet. Morbi vehicula gravida dignissim. Nunc tincidunt volutpat lacus eget varius. Integer iaculis, lectus in cursus placerat, nisl elit lobortis lorem, quis tincidunt dolor dui nec nulla. Suspendisse nibh diam, facilisis vel pretium sit amet, eleifend id felis. Curabitur ut porttitor elit.
                             </p>
@@ -87,14 +89,16 @@
                                 Etiam ultricies fermentum urna quis congue. Cras diam magna, egestas et tortor id, luctus vulputate tellus. Aenean condimentum accumsan commodo. Donec imperdiet libero at augue dapibus malesuada et consectetur turpis. Nullam vestibulum sapien velit, nec varius diam lobortis non. Phasellus vel purus sit amet elit congue sagittis. Vivamus quis porta turpis. Suspendisse potenti. Cras sit amet metus est. Sed vulputate iaculis nibh ut porttitor.
                             </p>
                             <div id="header2">
+                                <br />
                                 <h4><a href="#top" class="links">Back to top</a></h4>
                                 <br />
                             </div>
                         </div>
                         <div id="RESUME" style=" padding-left: 0px; padding-right: 0px; width:100%; height:1255px">
-                            <h3 class="paragraph">Resume</h3>
+                            <h3 class="title_about_me">Resume</h3>
                             <object data="resume.pdf" type="application/pdf" name="resume.pdf" style="width:100%; height:85%"></object>
                             <div id="header2">
+                                <br />
                                 <h4><a href="#top" class="links">Back to top</a></h4>
                             </div>
                         </div>
