--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <link rel="icon" href="images/circle_favicon.ico" type="image/x-icon">
     <style type="text/css"></style>
     <link rel=stylesheet href="style.css" type="text/css" media=screen>
-    <script type="text/javascript" src="jquery.js"></script>
-    <script src="jquery.stellar.js"></script>
+    <!--<script type="text/javascript" src="jquery.js"></script>
+    <script src="jquery.stellar.js"></script>-->
 </head>
 <body>
     <div class="god_wrap">
@@ -25,7 +25,7 @@
                     <li><a href="contact.html" class="links">Contact</a></li>
                 </ul>
             </header>
-            <div class="content_wrap">
+            <div class="initial_wrap">
                 <div id="section1">
                     <div class="contact_content">
                         <p class="paragraph">
@@ -36,21 +36,21 @@
                     </div>
                     <div class="contact_content">
                         <p class="paragraph">
-                            <a href="http://www.linkedin.com/pub/austin-klein/81/294/824">
+                            <a href="http://www.linkedin.com/pub/austin-klein/81/294/824" target="_blank">
                                 <img src="images/linkedin.png" width="150" height="150">
                             </a>
                         </p>
                     </div>
                     <div class="contact_content">
                         <p class="paragraph">
-                            <a href="https://github.com/amk5401">
+                            <a href="https://github.com/amk5401" target="_blank">
                                 <img src="images/github.png" width="150" height="150">
                             </a>
                         </p>
                     </div>
                     <div class="contact_content">
                         <p class="paragraph">
-                            <a href="https://www.facebook.com/austin.klein.14">
+                            <a href="https://www.facebook.com/austin.klein.14" target="_blank">
                                 <img src="images/facebook.png" width="150" height="150">
                             </a>
                         </p>
