--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="icon" href="images/circle_favicon.ico" type="image/x-icon">
     <style type="text/css"></style>
     <link rel=stylesheet href="style.css" type="text/css" media=screen>
-    <script type="text/javascript" src="jquery.js"></script>
+    <!--<script type="text/javascript" src="jquery.js"></script>
+    <script src="jquery.stellar.js"></script>-->
 </head>
 <body>
     <div class="god_wrap">
@@ -70,7 +71,7 @@
                 </div>
             </div>
             -->
-            <div class="content_wrap">
+            <div class="initial_wrap">
                 <div class="image_text">
                     <!--
                     <div class="content">
