--- a/code_samples.html
+++ b/code_samples.html
@@ -5,12 +5,12 @@
     <link rel="icon" href="images/circle_favicon.ico" type="image/x-icon">
     <style type="text/css"></style>
     <link rel=stylesheet href="style.css" type="text/css" media=screen>
-    <script type="text/javascript" src="jquery.js"></script>
-    <script src="jquery.stellar.js"></script>
+    <!--<script type="text/javascript" src="jquery.js"></script>
+    <script src="jquery.stellar.js"></script>-->
 </head>
 <body>
     <div class="god_wrap">
-        <div class="middle_wrap">
+        <div class="middle_wrap" id="top">
             <header id="header1">
                 <ul>
                     <li><a href="index.html" class="links">Home</a></li>
@@ -24,13 +24,63 @@
                     <li><a href="contact.html" class="links">Contact</a></li>
                 </ul>
             </header>
-            <!--
-            <div class="footer_wrap">
-                <footer>
-                    <div class="header1">Austin Klein</div>
-                </footer>
+            <div class="code_sample_wrap">
+                <div id="section1">
+                    <div class="content">
+                        <h3 class="paragraph_code_samples">ToolShare</h3>
+                        <br />
+                        <p class="paragraph_code_samples">ToolShare was created using the Django web framework.<br /><br />It was a team project assigned for the Intro to Software Engineering class at Rochester Institute of Technology.<br /><br />The product was intended to improve communities by providing an easy mechanism for sharing items between neighbors.</p>
+                        <br />
+                        <p class="paragraph_code_samples"><a href="https://github.com/jcdesimp/SEToolShare" target="_blank" class="links">See the code...</a></p>
+                    </div>
+                    <div class="content_extended">
+                        <img id="jpg" src="images/ToolShare Home Page.png">
+                        <img id="jpg" src="images/ToolShare Description.png">
+                    </div>
+                </div>
+                <div id="header2">
+                    <h4><a href="#top" class="links">Back to top</a></h4>
+                </div>
             </div>
-            -->
+            <div class="wrap">
+                <div id="section1">
+                    <div class="content">
+                        <h3 class="paragraph_code_samples">Skyscraper</h3>
+                        <br />
+                        <p class="paragraph_code_samples">A backtracking solver for the Skyscraper puzzle using the python language.<br /><br />Rules / Objectives<br />=============<br />Every square contains a skyscraper.<br />-------------<br />Complete the grid such that every row and column contains the numbers 1 to the size of the grid.<br />-------------<br />Every row/column contains each number exactly once.<br />-------------<br />The rules around the outside tell you how many skyscrapers you can see.<br />-------------<br />You can't see a shorter skyscraper behind a taller one.<br />-------------</p>
+                        <br />
+                        <p class="paragraph_code_samples"><a href="https://github.com/amk5401/skyscraper" target="_blank" class="links">See more code...</a></p>
+                    </div>
+                    <div class="content_extended">
+                        <img id="jpg" src="images/Skyscraper Output.png">
+                        <img id="jpg" src="images/Skyscraper Code.png">
+                    </div>
+                    <div id="header2">
+                        <h4><a href="#top" class="links">Back to top</a></h4>
+                    </div>
+                </div>
+                <div id="section1">
+                    <div class="content">
+                        <h3 class="paragraph_code_samples">Medical Image Viewer</h3>
+                        <br />
+                        <p class="paragraph_code_samples">[Current Project]</p>
+                        <br />
+                        <p class="paragraph_code_samples"><a href="https://github.com/7imbrook/262-imaging-studies-system"  target="_blank" class="links">See more code...</a></p>
+                    </div>
+                    <div id="header2">
+                        <h4><a href="#top" class="links">Back to top</a></h4>
+                        <br />
+                        <br />
+                    </div>
+                </div>
+            </div>
+            <!--
+        <div class="footer_wrap">
+            <footer>
+                <div class="header1">Austin Klein</div>
+            </footer>
+        </div>
+        -->
         </div>
     </div>
 </body>
