Small design changes

--- a/about_me.html
+++ b/about_me.html
@@ -82,11 +82,7 @@
                         <div id="ROWING">
                             <h3 class="title_about_me">Rowing</h3>
                             <p class="paragraph_about_me">
-                                Morbi fermentum gravida lectus, et porttitor ipsum elementum vitae. Etiam rutrum felis eu ante tristique eleifend. Nam bibendum posuere massa. Nunc vitae mauris ut sem malesuada lacinia vel id risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum eleifend posuere. Praesent aliquam vulputate massa sit amet imperdiet. Morbi vehicula gravida dignissim. Nunc tincidunt volutpat lacus eget varius. Integer iaculis, lectus in cursus placerat, nisl elit lobortis lorem, quis tincidunt dolor dui nec nulla. Suspendisse nibh diam, facilisis vel pretium sit amet, eleifend id felis. Curabitur ut porttitor elit.
-                            </p>
-                            <br />
-                            <p class="paragraph_about_me">
-                                Etiam ultricies fermentum urna quis congue. Cras diam magna, egestas et tortor id, luctus vulputate tellus. Aenean condimentum accumsan commodo. Donec imperdiet libero at augue dapibus malesuada et consectetur turpis. Nullam vestibulum sapien velit, nec varius diam lobortis non. Phasellus vel purus sit amet elit congue sagittis. Vivamus quis porta turpis. Suspendisse potenti. Cras sit amet metus est. Sed vulputate iaculis nibh ut porttitor.
+                                [Section under construction...]
                             </p>
                             <div id="header2">
                                 <br />
