--- a/code_samples.html
+++ b/code_samples.html
@@ -49,7 +49,7 @@
                         <br />
                         <p class="paragraph_code_samples">A backtracking solver for the Skyscraper puzzle using the python language.<br /><br />Rules / Objectives<br />=============<br />Every square contains a skyscraper.<br />-------------<br />Complete the grid such that every row and column contains the numbers 1 to the size of the grid.<br />-------------<br />Every row/column contains each number exactly once.<br />-------------<br />The rules around the outside tell you how many skyscrapers you can see.<br />-------------<br />You can't see a shorter skyscraper behind a taller one.<br />-------------</p>
                         <br />
-                        <p class="paragraph_code_samples"><a href="https://github.com/amk5401/skyscraper" target="_blank" class="links">See more code...</a></p>
+                        <!--<p class="paragraph_code_samples"><a href="https://github.com/amk5401/skyscraper" target="_blank" class="links">See more code...</a></p>-->
                     </div>
                     <div class="content_extended">
                         <img id="jpg" src="images/Skyscraper Output.png">
