--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 </head>
 <body>
     <div class="god_wrap">
-        <div class="rightside_wrap">
+        <!--<div class="rightside_wrap">
             <div class="rightside_picture">
-                <!--<img src="images/Head of the Fish.png" style="width:100%; height:100%">-->
-                <!--
+                <img src="images/Head of the Fish.png" style="width:100%; height:100%">
                 <script type="text/javascript">
                     $(window).scroll(function () {
                         if ($(window).width > 1134) {
@@ -28,9 +27,8 @@
                         }
                     });
                 </script>
-                -->
             </div>
-        </div>
+        </div>-->
         <div class="middle_wrap">
             <header id="header1">
                 <ul>
