--- a/about_me.html
+++ b/about_me.html
@@ -15,6 +15,18 @@
             $("#tabs").tabs();
         });
     </script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-50391031-1', 'austin-klein.com');
+        ga('send', 'pageview');
+
+    </script>
 </head>
 <body>
     <div class="god_wrap">
