--- a/index.html
+++ b/index.html
@@ -1,166 +1,279 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<!--http://www.designbolts.com/2012/11/26/25-free-simple-black-seamless-patterns-for-website-backgrounds/-->
+<html lang="en" ng-app="personalWebsiteApp">
 <head>
-    <title>Austin Klein</title>
-    <link rel="icon" href="images/circle_favicon.ico" type="image/x-icon">
-    <style type="text/css"></style>
-    <link rel=stylesheet href="style.css" type="text/css" media=screen>
-    <!--<script type="text/javascript" src="jquery.js"></script>
-    <script src="jquery.stellar.js"></script>-->
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-50391031-1', 'austin-klein.com');
-        ga('send', 'pageview');
+    <title>Austin Klein - Online Resume</title>
 
-    </script>
+    <!-- Bootstrap core CSS -->
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" />
+    <link href="/css/bootstrap.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
+
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+    <!--[if lt IE 9]>
+        <script src="/view/js/html5shiv.js"></script>
+        <script src="/view/js/respond.min.js"></script>
+    <![endif]-->
+    <!-- Begin Inspectlet Embed Code -->
+    <!-- <script type="text/javascript" id="inspectletjs">
+			window.__insp = window.__insp || [];
+			__insp.push(['wid', 92785244]);
+			(function() {
+				function __ldinsp(){var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://www.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); }
+				if (window.attachEvent){
+					window.attachEvent('onload', __ldinsp);
+				}else{
+					window.addEventListener('load', __ldinsp, false);
+				}
+			})();
+    </script>-->
+    <!-- End Inspectlet Embed Code -->
 </head>
-<body>
-    <div class="god_wrap">
-        <!--<div class="rightside_wrap">
-            <div class="rightside_picture">
-                <img src="images/Head of the Fish.png" style="width:100%; height:100%">
-                <script type="text/javascript">
-                    $(window).scroll(function () {
-                        if ($(window).width > 1134) {
-                            //begin to scroll
-                            var right = $(rightside_wrap);
-                            right.css('width', relative);
-                        } else {
-                            //lock it back into place
-                            var right = $(rightside_wrap);
-                            right.css('width', 0);
-                        }
-                    });
-                </script>
-            </div>
-        </div>-->
-        <div class="middle_wrap">
-            <header id="header1">
-                <ul>
-                    <li><a href="index.html" class="links">Home</a></li>
-                    <li><a href="about_me.html" class="links">About Me</a></li>
-                    <li>
-                        <a href="index.html">
-                            <img src="images/logo.png" width="121" height="74">
-                        </a>
-                    </li>
-                    <li><a href="code_samples.html" class="links">Code Samples</a></li>
-                    <li><a href="contact.html" class="links">Contact</a></li>
-                </ul>
-            </header>
-            <!--
-            <div class="content_wrap">
-                <div id="section1">
-                    <div class="content">
-                        <h3 class="paragraph">Writing</h3>
-                        <br />
-                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis tempus cursus mentum.</p>
-                        <br />
-                        <p class="paragraph"><a href="index.html" class="links">Read My Blog</a></p>
-                    </div>
-                    <div class="content">
-                        <h3 class="paragraph">Development</h3>
-                        <br />
-                        <p class="paragraph">Sed adipiscing urna et neque euismod, et luctus eros vehicula. Vestibulum dapibus urna at mi porttitor condimentum.</p>
-                        <br />
-                        <p class="paragraph"><a href="index.html" class="links">View My Themes</a></p>
-                    </div>
-                    <div class="content">
-                        <h3 class="paragraph">Newsletter</h3>
-                        <br />
-                        <p class="paragraph">Aliquam porttitor vel sapien id pharetra. Mauris id mauris eleifend, dignissim lacus id, tempus mauris, eros vehicula.</p>
-                        <br />
-                        <p class="paragraph"><a href="index.html" class="links">Subscribe Via Email</a></p>
-                    </div>
-                </div>
-            </div>
-            -->
-            <div class="initial_wrap">
-                <div class="image_text">
-                    <!--
-                    <div class="content">
-                        <h3 class="paragraph">Writing</h3>
-                        <br />
-                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis tempus cursus mentum.</p>
-                        <br />
-                        <p class="paragraph"><a href="index.html" class="links1">Read My Blog</a></p>
-                    </div>
-                    -->
-                </div>
-            </div>
-            <div class="wrap">
-                <div class="image_text1">
-                    <!--
-                    <div class="content">
-                        <h3 class="paragraph">Writing</h3>
-                        <br />
-                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis tempus cursus mentum.</p>
-                        <br />
-                        <p class="paragraph"><a href="index.html" class="links1">Read My Blog</a></p>
-                    </div>
-                    <div class="content">
-                        <h3 class="paragraph">Development</h3>
-                        <br />
-                        <p class="paragraph">Sed adipiscing urna et neque euismod, et luctus eros vehicula. Vestibulum dapibus urna at mi porttitor condimentum.</p>
-                        <br />
-                        <p class="paragraph"><a href="index.html" class="links1">View My Themes</a></p>
-                    </div>
-                    <div class="content">
-                        <h3 class="paragraph">Newsletter</h3>
-                        <br />
-                        <p class="paragraph">Aliquam porttitor vel sapien id pharetra. Mauris id mauris eleifend, dignissim lacus id, tempus mauris, eros vehicula.</p>
-                        <br />
-                        <p class="paragraph"><a href="index.html" class="links1">Subscribe Via Email</a></p>
-                    </div>
-                -->
-                </div>
-            </div>
-            <div class="wrap">
-                <div class="section1">
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                </div>
-            </div>
-                <!--
-        <div class="footer_wrap">
-            <footer>
-                <div class="header1">Austin Klein</div>
-            </footer>
+<body data-spy="scroll" data-target="#navbar-example" ng-controller="personalWebsiteController as controller">
+
+    <div id="top" class="jumbotron" data-position="center center">
+        <div class="container">
+            <h1>{{profile.name}}</h1>
+            <p class="left-text">Online resume</p>
         </div>
-        <script type="text/javascript">
-            (function () {
-                var a = document.body,
-                    e = document.documentElement;
-                $(window).unbind("scroll").scroll(function () {
-                    a.style.backgroundPosition = "0px " + -(Math.max(e.scrollTop, a.scrollTop) / 7) + "px";
-                });
-            })();
-        </script>
 
-        <script type="text/javascript" src="{{STATIC_URL}}js/jquery.scrolling-parallax.js">
+        <div class="overlay"></div>
 
-        </script>
-        -->
+        <a href="#profile" class="scroll-down">
+            <span class="glyphicon glyphicon-chevron-down"></span>
+        </a>
+    </div>
+
+    <nav class="navbar navbar-default" id="navbar-example" role="navigation">
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse" >
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#profile">Profile</a></li>
+                <li><a href="#experiences">Experiences</a></li>
+                <li><a href="#abilities">Abilities</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </nav>
+
+    <div class="background-white">
+        <div id="profile" class="container">
+            <h2>Profile</h2>
+
+            <hr />
+
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>About me</h3>
+                    <p>
+                        {{profile.biography}}
+                    </p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <img class="profile-picture" src="/assets/images/Austin_Klein_Profile.jpg" alt="Austin Klein" />
+                </div>
+                <div class="col-md-4">
+                    <h3>Details</h3>
+                    <p>
+                        <strong>Name:</strong><br />
+                        {{profile.name}}<br />
+                        <strong>Age:</strong><br />
+                        {{profile.birth_date | ageFilter}}<br />
+                        <strong>Location:</strong><br />
+                        {{profile.location}}
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
+
+    <div id="experiences" class="container">
+        <h2>Experiences</h2>
+
+        <hr />
+
+        <h3>Careers</h3>
+        <div class="experiences" ng-repeat="career in careers">
+            <div class="experience row">
+                <div class="col-md-4">
+                    <h4>{{career.title}}</h4>
+                    <p class="experience-period">
+                        {{career.start_date}} - {{career.end_date}}
+                    </p>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        <strong>{{career.specification}}</strong>
+                        <br />
+                        <span>
+                            {{career.description}}
+                        </span>
+                        <span class="link">
+                            <span class="glyphicon glyphicon-link"></span>
+                            <a href={{career.link}} target="_blank">{{career.title}}</a>
+                        </span>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <hr />
+
+        <h3>Educations</h3>
+        <div class="experiences" ng-repeat="education in educations">
+            <div class="experience row">
+                <div class="col-md-4">
+                    <h4>{{education.title}}</h4>
+                    <p class="experience-period">
+                        {{education.start_date}} - {{education.end_date}}
+                    </p>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        <strong>{{education.specification}}</strong>
+                        <br />
+                        <span>
+                            {{education.description}}
+                        </span>
+                        <span class="link">
+                            <span class="glyphicon glyphicon-link"></span>
+                            <a href={{education.link}} target="_blank">{{education.title}}</a>
+                        </span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="background-white">
+        <div id="abilities" class="container">
+            <h2>Abilities</h2>
+
+            <hr />
+
+            <h3>Classes</h3>
+            <div class="row">
+                <div class="col-md-6" ng-repeat="class in classes">
+                    <ul>
+                        {{class.title}}
+                    </ul>
+                </div>
+            </div>
+
+            <hr />
+
+            <h3>Technical Skills</h3>
+            <div class="row">
+                <div class="col-md-6" ng-repeat="skill in technical_skills">
+                    <b>{{skill.type}}: </b>
+                    <ul>
+                        {{skill.title}}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div id="projects" class="container">
+        <h2>Projects</h2>
+
+        <hr />
+        <!--
+        <div class="row">
+            <div class="col-md-6 col-sm-12 col-xs-12" ng-repeat="project in projects">
+                <figure class="effect">
+                    <img src="/assets/images/{{project.image}}" alt={{project.title}} />
+                    <figcaption>
+                        <h3>{{project.title}}</h3>
+                        <p>{{project.description}}</p>
+                        <a href={{project.link}} target="_blank">View more</a>
+                        <span class="icon">
+                            <span class="glyphicon glyphicon-new-window"></span>
+                        </span>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+            -->
+
+        <div class="row photo-grid">
+            <div class="col-md-6 col-sm-12 col-xs-12 inner" ng-repeat="project in projects">
+                <figure>
+                    <img src="/assets/images/{{project.image}}" alt={{project.title}} />
+                    <figcaption>
+                        <h3>{{project.title}}</h3>
+                        <p>{{project.description}}</p>
+                        <a href={{project.link}} target="_blank">Learn more</a>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="background-gray">
+        <div id="contact" class="bottom-container">
+            <h2>Contact</h2>
+
+            <hr id="bottom-hr"/>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="horizontal">
+                        <li class="col-md-4">
+                            <a href={{contact_details.github}} target="_blank">
+                                <img src="/assets/images/github.png" height="65">
+                                <span>Github - amk5401</span>
+                            </a>
+                        </li>
+                        <li class="col-md-4">
+                            <a href=mailto:{{contact_details.email}}>
+                                <img src="/assets/images/email.png" height="65">
+                                <span>Email - amk5401@rit.edu</span>
+                            </a>
+                        </li>
+                        <li class="col-md-4">
+                            <a href={{contact_details.linkedin}} target="_blank">
+                                <img src="/assets/images/linkedin.png" height="65">
+                                <span>LinkedIn - Austin Klein</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <hr id="bottom-hr" />
+
+            <div class="text-center project-referal">
+                <p>Check out the code for this site.</p>
+                <a href="https://github.com/amk5401/amk5401.github.io" class="btn btn-primary btn-custom" target="_blank">Github Repository</a>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="/js/angular.min.js"></script>
+    <script type="text/javascript" src="/js/script.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.js"></script>
+
+    <!-- Google Analytics -->
+    <!--<script type="text/javascript">
+          var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-3361587-8']);
+          _gaq.push(['_trackPageview']);
+
+          (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
+    </script>-->
 </body>
 </html>
