--- a/index.html
+++ b/index.html
@@ -183,23 +183,6 @@
         <h2>Projects</h2>
 
         <hr />
-        <!--
-        <div class="row">
-            <div class="col-md-6 col-sm-12 col-xs-12" ng-repeat="project in projects">
-                <figure class="effect">
-                    <img src="/assets/images/{{project.image}}" alt={{project.title}} />
-                    <figcaption>
-                        <h3>{{project.title}}</h3>
-                        <p>{{project.description}}</p>
-                        <a href={{project.link}} target="_blank">View more</a>
-                        <span class="icon">
-                            <span class="glyphicon glyphicon-new-window"></span>
-                        </span>
-                    </figcaption>
-                </figure>
-            </div>
-        </div>
-            -->
 
         <div class="row photo-grid">
             <div class="col-md-6 col-sm-12 col-xs-12 inner" ng-repeat="project in projects">
@@ -264,16 +247,17 @@
     <script type="text/javascript" src="/js/bootstrap.js"></script>
 
     <!-- Google Analytics -->
-    <!--<script type="text/javascript">
-          var _gaq = _gaq || [];
-          _gaq.push(['_setAccount', 'UA-3361587-8']);
-          _gaq.push(['_trackPageview']);
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-          (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-          })();
-    </script>-->
+        ga('create', 'UA-50391031-1', 'austin-klein.com');
+        ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
