--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="/css/bootstrap.css" rel="stylesheet" />
     <link href="/css/style.css" rel="stylesheet" />
 
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon" />
 
     <!--[if lt IE 9]>
         <script src="/view/js/html5shiv.js"></script>
@@ -187,7 +187,7 @@
         <div class="row photo-grid">
             <div class="col-md-6 col-sm-12 col-xs-12 inner" ng-repeat="project in projects">
                 <figure>
-                    <img src="/assets/images/{{project.image}}" alt={{project.title}} />
+                    <img ng-src="/assets/images/{{project.image}}" alt={{project.title}} />
                     <figcaption>
                         <h3>{{project.title}}</h3>
                         <p>{{project.description}}</p>
