Add metadata to index page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon" />
 
+    <meta name="keywords" content="austin, klein, austinklein, rit, RIT, Rochester Institute of Technology, rochester, resume, online, angular, bootstrap, one page, chatham, new york, ny" />
+    <meta name="description" content="I am Austin Klein. A Software Engineer with an online resume outlining my skills, work experience, and recent projects." />
+	
     <!--[if lt IE 9]>
         <script src="/view/js/html5shiv.js"></script>
         <script src="/view/js/respond.min.js"></script>
