--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         <hr />
 
-        <h3>Educations</h3>
+        <h3>Education</h3>
         <div class="experiences" ng-repeat="education in educations">
             <div class="experience row">
                 <div class="col-md-4">
